# COMPSCI-520_Prompting_Evaluations

./: LICENSE  README.md
LLM_CodeGen_Assignment/: .coverage  EVALUATION_STRUCTURE.md  Makefile  PART2_INSTRUCTIONS.md  PYTEST_COMMANDS.md  README.md  check_gemini_models.py  count_assertion_results.py  detailed_test_case_analysis.py  extract_baseline_coverage.py  generate_combined_html_report.py  generate_model_reports.py  llm_test_generation_workflow.py  pyproject.toml  pytest.ini  requirements.txt  run_coverage_analysis.py  scripts.json  setup.py  setup_gemini.py  test_writing_examples.py  tox.ini
LLM_CodeGen_Assignment/coverage_reports/: apps_2_p3_baseline.json  apps_2_p3_baseline_branch.json  apps_2_p3_buggy_iteration3.json  apps_2_p3_iteration1.json  apps_2_p3_iteration1_branch.json  apps_2_p3_iteration2.json  apps_2_p3_iteration2_branch.json  apps_2_p3_iteration3.json  apps_2_p3_iteration3_branch.json  apps_3_p4_baseline.json  apps_3_p4_baseline_branch.json  apps_3_p4_buggy_iteration3.json  apps_3_p4_iteration1.json  apps_3_p4_iteration1_branch.json  apps_3_p4_iteration2.json  apps_3_p4_iteration2_branch.json  apps_3_p4_iteration3.json  apps_3_p4_iteration3_branch.json  detailed_summary.html  summary.html  testevaluation.html
LLM_CodeGen_Assignment/datasets/: apps_tough_problems.json  apps_tough_problems.py  humaneval_dataset.py  problem_references.md
LLM_CodeGen_Assignment/evaluation_scripts/: README.md  comprehensive_pass_at_k_evaluator.py  enhanced_gemini_prompting_strategies.py  enhanced_prompting_strategies.py  gemini_pass_at_k_evaluator.py  (+4 more)
(+257 files in other folders)
